# puya-cli

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/puya/: __init__.py  cli.py
src/puya/commands/: _helpers.py  account.py  doctor.py  schema.py
src/puya/commands/odoo/: __init__.py  call.py  cancel.py  confirm.py  count.py  create.py  delete.py  fields.py  pending.py  read.py  search.py  status.py  write.py
src/puya/commands/skills/: __init__.py  _api.py  state.py
src/puya/commands/tool/: __init__.py  call.py  list_cmd.py
src/puya/lib/: approvals.py  audit.py  client.py  config.py  odoo_client.py  output.py  permissions.yaml  previews.py  rbac.py  runtime.py  slack.py  telegram.py
tests/: test_cli.py  test_doctor.py  test_emit_hint.py  test_helpers.py  test_integration.py  test_pending_normalization.py  test_rbac.py  test_retry.py  test_timeout.py  test_tool_call.py
